--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,14 @@ a:visited {
    text-decoration: none;
    color: #FFF;
 }
+
+.jumbotron {
+   padding-top: 50px;
+   padding-bottom: 50px;
+   background-color: #1ABC9C;
+}
+
+.content_jumbo {
+   height: 200px; /*da rimuovere*/
+   background-color: wheat;
+}
