--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,10 @@ a:visited {
    color: #FFF;
 }
 
-.jumbotron {
-   padding-top: 50px;
-   padding-bottom: 50px;
+section.jumbotron,
+section.about {
+   padding-top: 30px;
+   padding-bottom: 30px;
    background-color: #1ABC9C;
 }
 
@@ -34,3 +35,4 @@ a:visited {
    border: 1px solid black; /*da rimuovere*/
    background-color: yellowgreen;
 }
+
