--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ a:visited {
    background-color: #1ABC9C;
 }
 a.color_green {
-   color: #1ABC9C;
+   color: rgba(26, 188, 156, 0.644);
 }
 
 /* LINEA SIMPATICA */
@@ -73,6 +73,31 @@ header {
 .portfolio_img img {
    width: 100%;
    border-radius: 10px;
+}
+.layover_green {
+   width: 100%;
+   height: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+   border-radius: 10px;
+   background-color: transparent;
+   transition: all 0.2s;
+}
+.portfolio_img .fa-plus {
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   color: #FFF;
+   font-size: 0px;
+   transition: all 0.2s;
+}
+.portfolio_img:hover .layover_green {
+   background-color: rgba(26, 188, 156, 0.7);
+}
+
+.portfolio_img:hover .fa-plus {
+   font-size: 70px;
 }
 
 /* ABOUT  */
